--- a/listen2gether-client/src/styles.css
+++ b/listen2gether-client/src/styles.css
@@ -1,5 +1,3 @@
-
-
 .material-icons {
     font-family: 'Material Icons';
     font-weight: normal;
@@ -80,31 +78,37 @@ body {
     position: relative;
 }
 
-.container::after, .container-title::before, #search-container::before {
+.container::after,
+.container-title::before,
+#search-container::before {
     content: '';
-    left: -5rem; right: -5rem;
+    left: -5rem;
+    right: -5rem;
     height: 1.5rem;
     position: absolute;
     z-index: 1;
 }
+
 .container::after {
     background: linear-gradient(0deg, #242731 32%, rgba(45, 48, 57, 0) 100%);
     bottom: .5rem;
 }
-.container-title::before, #search-container::before {
+
+.container-title::before,
+#search-container::before {
     background: linear-gradient(180deg, #242731 32%, rgba(45, 48, 57, 0) 100%);
     bottom: -1.5rem;
 }
 
 
 .loading {
-    width: 1.5rem;
+    width: 1.2rem;
     aspect-ratio: 1;
     border: 2px solid #a7acb8;
     border-top-color: transparent;
     border-radius: 50%;
     animation: load 1s linear infinite;
-    margin: 0 4px;
+    margin: 6px;
 }
 
 @keyframes load {
